--- a/lunch.html
+++ b/lunch.html
@@ -28,12 +28,7 @@
 			height:50px;
 			margin:0 auto;
 		}
-		#mid_title{
-			width:570px;
-			height:30px;
-			margin:0 auto;
-		}
-		#mid_title p{
+		#mid_block p{
 			border-bottom:2px solid gray;
 		}
 		#block_2{
@@ -47,9 +42,15 @@
 			float:right;
 		}
 		#block_3{
-			height:20px;
+			height:30px;
+			width:120px;
+			margin:10px auto;
+
+		}
+		#block_5{
+			height:30px;
 			width:320px;
-			margin:20px auto;
+			margin:10px auto;
 
 		}
 		#rname{
@@ -63,7 +64,7 @@
 		#float_block{
 			width:500px;
 			height:200px;
-			margin:50px auto;
+			margin:10px auto;
 			display:none;
 		}
 		#float_block p{
@@ -82,6 +83,31 @@
 			margin-left:10px;
 			margin-bottom: 10px;
 		}
+
+		@media screen and (max-width: 400px) {
+   	 	#block_1{
+	 		width:250px;
+	 		height:70px;
+   	 	}
+   	 	#block_1 p{
+			display:none;
+   	 	}
+   		#mid_block{
+		 	width: 350px;
+		 	height:270px;
+   	 	}
+   	 	#block_2{
+   	 		width:100%;
+   	 		height:150px;
+   	 	}
+   	 	#block_4{
+   	 		width:100%;
+   	 	}
+   	 	#float_block{
+   	 		width:350px;
+   	 	}
+	} 
+
 		
 	</style>
 </head>
@@ -92,24 +118,25 @@
   			<div class="form-group">
   			  	<input  class="form-control" id="input_chooise">
   			</div>
-  			<button class="btn btn-default" id='add_chooise'>add</button>
-  			<p>点击餐厅挂起,再次点击解挂</p>
+  			<a class="btn btn-default" id='add_chooise'>add</a>
 		</form>
-	</div>
-	<div id='mid_title'>
-		<p style='width:60%; float:left'>正常</p>
-		<p style='width:32%; float:right'>挂起</p>
+		<p>点击餐厅挂起,再次点击解挂</p>
 	</div>
 	<div id='mid_block'>
 		<div id='block_2'>
+			<p style='width:100%; float:left'>正常</p>
 			<!--<p class="btn btn-danger" id='rname'>Link</p>-->
 		</div>
 		<div id='block_4'>
+			<p style='width:100%; float:right'>挂起</p>
 		</div>
 	</div>
 	
 	<div id='block_3'>
 		<button class="btn btn-default" id="Hava_lunch" value="1">Have lunch</button>
+		
+	</div>
+	<div id='block_5'>
 		<button class="btn btn-default" id="Refresh" value="1">Refresh</button>
 		<button class="btn btn-default" id='clear_local'>clear</button>
 		<button class="btn btn-default" id='chg_num'>change</button>
@@ -151,7 +178,8 @@
 
 	$("#add_chooise").click(function() {
 		var ranName = $("#input_chooise").val();
-		if (check(ranName)){
+		var reg = / /g;
+		if (check(ranName) && !reg.test(ranName) && ranName !=""){
 			var num1 = Number(localStorage.getItem("number")) + 1;
 			localStorage.setItem(num1,ranName);
 			localStorage.removeItem("number"); 
